tokenチェック実装
